app.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  ports:
  - port: 8080
  selector:
    app: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: foo
  name: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - env:
        - name: HOST_IP
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_SERVICE_ACCOUNT
          valueFrom:
            fieldRef:
              fieldPath: spec.serviceAccountName
        image: us-central1-docker.pkg.dev/sp1-21-gateway/gitops-demo/foo@sha256:16e4eaf8cd303275380667c0e46c5c6340f5d99c1d913cd05d15819c69562456
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 10
        name: foo
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 11
        resources:
          limits:
            memory: 768Mi
      imagePullSecrets:
      - name: artifact-registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-ingress
spec:
  defaultBackend:
    service:
      name: foo-service
      port:
        number: 8080
  rules:
  - http:
      paths:
      - backend:
          service:
            name: foo-service
            port:
              number: 8080
        path: /foo
        pathType: Prefix
